; ModuleID = '/home/carl/AnghaBench/freebsd/stand/powerpc/boot1.chrp/extr_boot1.c_dskread.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/powerpc/boot1.chrp/extr_boot1.c_dskread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bootdev = common dso_local global i32 0, align 4
@DEV_BSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32)* @dskread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dskread(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @bootdev, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @DEV_BSIZE, align 4
  %10 = mul nsw i32 %8, %9
  %11 = call i32 @ofw_seek(i32 %7, i32 %10)
  %12 = load i32, i32* @bootdev, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @DEV_BSIZE, align 4
  %16 = mul nsw i32 %14, %15
  %17 = call i32 @ofw_read(i32 %12, i8* %13, i32 %16)
  ret i32 0
}

declare dso_local i32 @ofw_seek(i32, i32) #1

declare dso_local i32 @ofw_read(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
